data/all_generated_tests/raw_wast_tests/call_InvalidorInconsistentControlFlowGraph_3550.wast
;; 9. **Test with Invalid Control Transfer via Calls**:     - **Description**: Attempt to perform a call within an invalid control transfer context, such as during an ongoing conditional branch.     - **Constraint Checked**: Validates proper handling of control transfer boundaries.     - **CFG Relation**: Ensures the CFG maintains a valid control flow without allowing incorrect state transitions.

(assert_invalid
  (module
    (func (result i32)
      (if (i32.const 1)
        (then (call 0))
      )
      (call 0)
    )
  )
  "invalid control transfer"
)